added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,8 +11,57 @@
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
+
+    
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+     <ul>
+       <li>The head element contains information about the webpage.</li>
+       <li>The body element represents the visible content shown to the user.</li>
+       <li>The child elements are nested inside other elements</li>
+       <li>The parent element is the element that holds all the children</li>
+       <li>Elements and tags differ in that elements  is the entire element from opening to closing</li>
+       <li>Tags is only what appears inside of brackets</li>
+       <li>Semantic HTML elements describes content and role it plays on a webpage and makes HTML easy to read to other developers</li>
+       <li>HTML is the content users see</li>
+       <li>Elements are made up of text image headers and list</li>
+       <li>Elements describe content to the browser and other developers</li>
+       <li>Declarations are not case sensitive</li>
+       <li>HTML elements are case sensitive</li>
+       <li>HTML attribute defines additional info about an element they are always defined in beggining and not at the end</li>
+     </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+     <ul>
+       <li>git status: checks what branch we are currently on</li>
+       <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+       <li>A Repository is a folder where all files and version hisories are stored</li>
+       <li>A branch is a workspace to make changes that will not affect the live switches
+       <li>Markdown turn text into GitHub code</li> 
+       <li>A pull Resquest is to ask for a change in one branch to be merged into another, usually after a review </li>
+       <li>A merge is when the pr is approved, it is merged onto main branch and deployed on a live site</li>
+       <li>We use issues to track our work.   It allows users to report new tasks and content fixes and allows users to track their progress on a project board</li>
+       <li>Federalist is a platform that securely deploys a website from GitHub repo and lets users preview proposed and published changes</li>
+       <li>It is important to memorize and practice Git flow</li>
+     </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+     <ul>
+       <li>Enter your JavaScript notes here</li>
+     </ul>
+      </section>
     </main>
 
     <footer>
