added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -36,7 +37,15 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>CSS Cascading Style Sheets
+          <li>CSS has to do with the syle on the webpage
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content inside an element
+          <li>content is presented through color aesthetics layout organization</li>  
+          <li>A wildcard aka asterisk makes all element on page the same</li>
+          <li>You can combine 2 selectors into a single rule with a comma</li>
+          <li>DRY code do not repeat yourself code is encouraged to reduce the number of lines of code, reduce size and complexity</li>
+          <li>Border assigns a border to page</li>
         </ul>
       </section>
    
