updated Javsscript notes in HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -69,7 +69,16 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
      <ul>
-       <li>Enter your JavaScript notes here</li>
+       <li>JavaScript adds function to your website similar to the way that you would use your house</li>
+       <li>javascript is an extremely useful tool that allows a user to interact with site</li>
+       <li>You can add comments to your code by useing /* followed by */</li>
+       <li>The browser will ignore anything between those symbols in lines of code</li>
+       <li>Conditionals are code structures used to test if an expression returns true or not and example is the if else statement</li>
+       <li>JavaScript is case sensitive</li>
+       <li>We need variables to do anything intersting in programming</li>
+       <li>You can use JavaScript to create games, incorporate 2d and 3d graphics and create comprehensive database driven apps</li>
+       <li>JavaScript is compact but extremely flexible</li>
+       <li>The inspector mode is an extremely useful tool in coding.  You can see how a website is structured and can be useful in debugging</li>
      </ul>
       </section>
     </main>
