Updated JavaScript notes in index file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -69,7 +69,13 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
      <ul>
-       <li>Enter your JavaScript notes here</li>
+       <li>JavaScript is how a user interacts with a webpage similar to how someone would make use of their home</li>
+       <li>By right clicking on a page you can enter inspector mode</li>
+       <li>When in inspector mode you can view how a website is coded and structured
+       <li>This can be an exteremly useful too when you are trying to debug and fix as page the way that you want</li>
+       <li>You can use JavaScript to create games,  utilize 3d and 2d graphics, and create comprehensive data base driven apps</li>
+       <li>It is important to remember that a browser reads code in the order that it is written</li>
+       <li>JavaScript is case sensitive</li>
      </ul>
       </section>
     </main>
